docs/apache-airflow-providers-weaviate/1.0.0/_sources/_api/airflow/providers/weaviate/operators/weaviate/index.rst.txt
:py:mod:`airflow.providers.weaviate.operators.weaviate`
=======================================================

.. py:module:: airflow.providers.weaviate.operators.weaviate


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.weaviate.operators.weaviate.WeaviateIngestOperator




.. py:class:: WeaviateIngestOperator(conn_id, class_name, input_json, **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Operator that store vector in the Weaviate class.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:WeaviateIngestOperator`

   Operator that accepts input json to generate embeddings on or accepting provided custom vectors
   and store them in the Weaviate class.

   :param conn_id: The Weaviate connection.
   :param class_name: The Weaviate class to be used for storing the data objects into.
   :param input_json: The JSON representing Weaviate data objects to generate embeddings on (or provides
       custom vectors) and store them in the Weaviate class. Either input_json or input_callable should be
       provided.

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('input_json',)

      

   .. py:method:: hook()

      Return an instance of the WeaviateHook.


   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



